--- a/src/components/ui/Menu/index.css
+++ b/src/components/ui/Menu/index.css
@@ -12,6 +12,39 @@
 .dldh-menu-submenu {
   position: relative;
 }
+.dldh-menu-item-group-title {
+  padding: 8px 16px;
+  //color: rgba(0,0,0,0.45);
+  font-size: 14px;
+  line-height: 1.5;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+.dldh-menu-sub.dldh-menu-inline .dldh-menu-item-group-title {
+  padding-left: 32px;
+}
+.dldh-menu-item-group-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.dldh-menu-vertical
+.dldh-menu-item,
+.dldh-menu-vertical-left .dldh-menu-item,
+.dldh-menu-vertical-right .dldh-menu-item,
+.dldh-menu-inline .dldh-menu-item,
+.dldh-menu-vertical .dldh-menu-submenu-title,
+.dldh-menu-vertical-left .dldh-menu-submenu-title,
+.dldh-menu-vertical-right .dldh-menu-submenu-title,
+.dldh-menu-inline .dldh-menu-submenu-title {
+  height: 40px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  padding: 0 16px;
+  overflow: hidden;
+  line-height: 40px;
+  text-overflow: ellipsis;
+}
 .dldh-menu-item, .dldh-menu-submenu, .dldh-menu-submenu-title {
   cursor: pointer;
   -webkit-transition: all .3s ease;
@@ -23,7 +56,7 @@
   position: relative;
   display: block;
   white-space: nowrap;
-  font-size: 12px;
+  font-size: 14px;
 }
 .dldh-menu-inline .ant-menu-item, .dldh-menu-vertical .dldh-menu-item {
   border-right: 1px solid #e9e9e9;
